# danube

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  danubefile.py  dev.db  justfile  lib.py  main.py  package.json  pyproject.toml
.opencode/plans/: 1768742624084-jolly-circuit.md
backend/: .pre-commit-config.yaml  db.py  main.py  pyproject.toml
backend/scripts/: lint.sh
danube/: controller.Dockerfile  danubefile.py  depends.py  docker_service.py  example.py  github_adapter.py  injector.py  main.py  model.py  parser.py  pipeline_config.py  pipeline_runner.py  pipeline_service.py  runner.py  schema.py  security.py  server.py  tasks_service.py  user_service.py
danube/entrypoints/: cli.py  rest.py
danube/lib/: pydantic_click.py
docs/: MIGRATION_SUMMARY.md  design_doc_legacy.md  tasks.md
docs/architecture/: components.md  data-model.md  execution-model.md  networking.md  observability.md  overview.md  security.md
docs/configuration/: blueprint-reference.md  cac-reference.md  server-config.md
docs/deployment/: installation.md  upgrades.md
docs/development/: setup.md  testing.md
docs/planning/: phase-1-core.md  phase-2-core.md  phase-3-core.md
docs/tickets/: README.md  epic-01-foundation.md  epic-02-kubernetes.md  epic-03-execution.md  epic-04-cac.md  epic-05-api-auth.md  epic-06-logs-artifacts.md  epic-07-frontend.md  epic-08-operations.md
lib/: danube.py
scripts/: lint.sh  update_ticket_status.py
src/: depends.py  main.py  model.py  pipeline_service.py  schema.py  security.py  user_service.py
tests/: conftest.py  docker_service.py  test_api.py  test_danube.py  test_docker.py  test_docker_service.py  test_user_service.py  user_service.py
