[tool.poetry]
name = "danube"
version = "0.1.0"
description = ""
authors = ["crpier <crpier42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
pydantic = "^1.10.8"
pytest = "^7.3.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
types-passlib = "^1.7.7.12"
types-python-jose = "^3.3.4.7"
docker = "^6.1.2"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
mypy = "^1.3.0"
black = "^23.3.0"
pre-commit = "^3.3.2"

[tool.poetry.scripts]
danube-cli = "danube.entrypoints.cli:cli"

[tool.pytest.ini_options]
filterwarnings = [
"ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning"
]

[tool.ruff]
extend-select = ["F", "E", "W", "C90", "I", "N", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "RUF"]
ignore = [
"S101", # Prefer asserts to raising errors. Note that means we should not build with `-O` flag
"A003", # Usually a class attribute `id` shadows the `id` function. I can live with that
"A002", # Usually a function argument named `id`. Also fine
"ANN101", # I see no need for type annotaion on `self`
"UP007", # Typer doesn't support `| None` unions in Python3.11 yet
]

[tool.ruff.per-file-ignores]
"tests/*" = [
"S311", # tests don't need cryptographically secure `random` lol
"S106", # tests don't mind hardcoded passwords
"SLF001", # whitebox tests would like to access private vars, especially in fakes
]
"danube/lib/pydantic_click.py" = [
"ANN401", # Use `Any`s a lot in glue code 🤷
"N806", # I can't rename functions I copied from click lib for now...have to look into re-decorating "argument" and "option"
"SLF001", # I am using private members of "click" for the same reason as above
"PGH003", # Let me silence large swathes of errros for now
]


[[tool.mypy.overrides]]
module = ["docker", "docker.types", "docker.models.containers"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
