[tool.poetry]
name = "danube"
version = "0.1.0"
description = ""
authors = ["crpier <crpier42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
pydantic = "^1.10.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
